force-app/main/default/objects/Test_Config__mdt/Test_Config__mdt.object-meta.xml
<CustomObject>
    <label>Test Config</label>
    <pluralLabel>Test Config</pluralLabel>
</CustomObject>