force-app/main/default/objects/Test_Config__mdt/fields/Child_Test_Config__c.field-meta.xml
<CustomField>
    <fullName>Child_Test_Config__c</fullName>
    <label>Child Test Config</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Child_Test_Config</relationshipLabel>
    <relationshipName>Child_Test_Config</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>