force-app/main/default/objects/Test_Config__mdt/fields/Comment_Reference__c.field-meta.xml
<CustomField>
    <fullName>Comment_Reference__c</fullName>
    <label>Comment Reference</label>
    <metadataRelationshipControllingField>Test_Config__mdt.Object_Reference__c</metadataRelationshipControllingField>
    <referenceTo>EntityParticle</referenceTo>
    <relationshipLabel>Comment_Reference</relationshipLabel>
    <relationshipName>Comment_Reference</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>