force-app/main/default/objects/Test_Config__mdt/fields/Is_Child__c.field-meta.xml
<CustomField>
    <fullName>Is_Child__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Child</label>
    <type>Checkbox</type>
</CustomField>