force-app/main/default/objects/Test_Config__mdt/fields/IsAdult__c.field-meta.xml
<CustomField>
    <fullName>IsAdult__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAdult</label>
    <type>Checkbox</type>
</CustomField>