force-app/main/default/objects/Test_Config__mdt/fields/IsDogFighting__c.field-meta.xml
<CustomField>
    <fullName>IsDogFighting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDogFighting</label>
    <type>Checkbox</type>
</CustomField>