force-app/main/default/objects/Test_Config__mdt/fields/IsDogOnly__c.field-meta.xml
<CustomField>
    <fullName>IsDogOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDogOnly</label>
    <type>Checkbox</type>
</CustomField>