force-app/main/default/objects/Test_Config__mdt/fields/IsPuppy__c.field-meta.xml
<CustomField>
    <fullName>IsPuppy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPuppy</label>
    <type>Checkbox</type>
</CustomField>