force-app/main/default/objects/Test_Config__mdt/fields/Object_Reference__c.field-meta.xml
<CustomField>
    <fullName>Object_Reference__c</fullName>
    <label>Object Reference</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Object_Reference</relationshipLabel>
    <relationshipName>Object_Reference</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>