force-app/main/default/objects/Test_Config__mdt/fields/Overall_Test_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Overall_Test_Display_Name__c</fullName>
    <label>Overall Test Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>