force-app/main/default/objects/Test_Config__mdt/fields/Parent_Test_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Test_Api_Name__c</fullName>
    <label>Parent Test Api Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>