force-app/main/default/objects/Test_Config__mdt/fields/Picklist_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Picklist_API_Name__c</fullName>
    <label>Picklist API Name</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>