force-app/main/default/objects/Test_Config__mdt/fields/Test_Comment_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Comment_Field_Name__c</fullName>
    <description>API Name of Test Comments Field</description>
    <label>Test Comment Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>