force-app/main/default/objects/Test_Config__mdt/fields/Test_Description__c.field-meta.xml
<CustomField>
    <fullName>Test_Description__c</fullName>
    <label>Test Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>