force-app/main/default/objects/Test_Config__mdt/fields/Test_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Test_Display_Order__c</fullName>
    <label>Test Display Order</label>
    <length>3</length>
    <type>Text</type>
</CustomField>