force-app/main/default/objects/Test_Config__mdt/fields/Test_Header_Description__c.field-meta.xml
<CustomField>
    <fullName>Test_Header_Description__c</fullName>
    <label>Test Header Description</label>
    <length>12000</length>
    <type>LongTextArea</type>
</CustomField>