force-app/main/default/objects/Test_Config__mdt/fields/Test_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Name__c</fullName>
    <label>Test Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>