force-app/main/default/objects/Test_Config__mdt/fields/Test_Optional_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Optional_Field__c</fullName>
    <label>Test Optional Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>