force-app/main/default/objects/Test_Config__mdt/fields/Test_Skip_Reason_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Skip_Reason_Field__c</fullName>
    <label>Test Skip Reason Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>