force-app/main/default/objects/Test_Config__mdt/fields/Test_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Test_Type_Description__c</fullName>
    <label>Test Type Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>